syntax = "proto3";

package service;

import "plan.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "makeaplan.com/api/service";

service PlanQuery {

  // 查询所有处于活跃状态(未归档)的计划
  rpc QueryActivePlanSummary (QueryActivePlanSummaryRequest) returns (QueryActivePlanSummaryResponse) {}

  // 查询所有归档计划
  rpc QueryArchivedPlan (QueryArchivedPlanRequest) returns (QueryArchivedPlanResponse) {}

  // 查询所有处于活跃状态(未归档)计划的索引(id)
  rpc QueryActivePlanIndex (QueryActivePlanIndexRequest) returns (QueryActivePlanIndexResponse) {}

  // 查询指定计划
  rpc QueryPlanSummary (QueryPlanSummaryRequest) returns (QueryPlanSummaryResponse) {}

  // 查询活跃计划和归档计划数量
  rpc QueryPlanCount (QueryPlanCountRequest) returns (QueryPlanCountResponse) {}
}

message QueryPlanCountRequest {}

message QueryPlanCountResponse {
  int32 active_plan_count = 1;
  int32 archived_plan_count = 2;
}

message QueryArchivedPlanRequest {}

message QueryActivePlanIndexRequest {}

message QueryActivePlanIndexResponse {
  repeated int32 ids = 1;
}

message QueryPlanSummaryResponse {
  PlanSummary plan_summary = 1;
}

message QueryPlanSummaryRequest {
  int32 id = 1;
}

message QueryActivePlanSummaryRequest {}

message QueryArchivedPlanResponse {
  repeated Plan plans = 1;
}

message QueryActivePlanSummaryResponse {
  repeated PlanSummary plans = 1;
}

service PlanModify {

  // 创建计划
  rpc CreatePlan (CreatePlanRequest) returns (CreatePlanResponse) {}

  // 删除计划
  rpc DeletePlan (DeletePlanRequest) returns (DeletePlanResponse) {}

  // 更新计划
  rpc UpdatePlan (UpdatePlanRequest) returns (UpdatePlanResponse) {}

  // 更新计划 Archived 状态
  rpc UpdatePlanArchiveState (UpdatePlanArchiveStateRequest) returns (UpdatePlanArchiveStateResponse) {}

  // 更新计划当前完成目标值
  rpc UpdatePlanCompletedIndex (UpdatePlanCompletedIndexRequest) returns (UpdatePlanCompletedIndexResponse) {}
}

message UpdatePlanCompletedIndexRequest {
  int32 plan_id = 1;
  int32 value = 2;
}

message UpdatePlanCompletedIndexResponse {}

message UpdatePlanArchiveStateResponse {
  google.protobuf.StringValue plan_new_code = 1;
}

message UpdatePlanArchiveStateRequest {
  int32 plan_id = 1;
  bool archived = 2;
}

message DeletePlanRequest{
  int32 id = 1;
}

message DeletePlanResponse {}

message CreatePlanRequest{
  string title = 1;
  google.protobuf.StringValue note = 2;
  PlanType type = 3;
  google.protobuf.Int32Value total_index = 4;
  google.protobuf.Int32Value min_index = 5;
  google.protobuf.Timestamp start_time = 6;
  google.protobuf.Timestamp end_time = 7;
}

message UpdatePlanRequest{
  int32 plan_id = 1;
  string title = 2;
  google.protobuf.StringValue note = 3;
  google.protobuf.Int32Value total_index = 4;
  google.protobuf.Int32Value min_index = 5;
  google.protobuf.Timestamp start_time = 6;
  google.protobuf.Timestamp end_time = 7;
}

message UpdatePlanResponse {}

message CreatePlanResponse{
  int32 id = 1;
  string code = 2;
}